Tabs / Multimedia player: Fixed z-index issue with multimedia players embedded in a tabs carousel

--- a/src/plugins/tabs/_base.scss
+++ b/src/plugins/tabs/_base.scss
@@ -108,6 +108,7 @@ $medGray: #ccc;
 				position: absolute;
 				top: 0;
 				width: 100%;
+				z-index: 0;
 			}
 		}
 
@@ -194,6 +195,7 @@ $medGray: #ccc;
 	}
 
 	[role="tabpanel"] {
+		position: relative;
 		z-index: 1;
 	}
 
